Fixed columns with un-even heights wrapping to the next row incorrectly https://stackoverflow.com/questions/22310912/bootstrap-row-with-columns-of-different-height

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -97,8 +97,12 @@ div.container a.navbar-brand > img {
 }
 /* Monitor Wall */
 
- .panel-height {
-
-    height: 100%;
-    margin-bottom: 1rem;
-}
+.row.display-flex {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .row.display-flex > [class*='col-'] {
+    display: flex;
+    flex-direction: column;
+  }
+  
